--- a/src/app/question-base/question-base.component.html
+++ b/src/app/question-base/question-base.component.html
@@ -1,11 +1,11 @@
-<div class="question-block padded" [formGroup]="formGroup">
+<div [formGroup]="formGroup">
   <div class="form-group">
     <label for="Question">Question</label>
     <input type="text" name="Question" class="form-control" formControlName="Question">
   </div>
   <div class="form-group">
     <label for="Type">Type</label>
-    <select name="Type" class="form-control" formControlName="Type">
+    <select name="Type" class="form-control" formControlName="QuestionTypeId">
       <option *ngFor="let questionType of questionTypes" [value]="questionType.Id">{{questionType.Name}}</option>
     </select>
   </div>
