--- a/src/app/sub-input/sub-input.component.html
+++ b/src/app/sub-input/sub-input.component.html
@@ -1,3 +1,10 @@
-<p>
-  sub-input works!
-</p>
+<div class="question-block padded" [formGroup]="formGroup">
+  <div class="form-group">
+    <label for="ConditionTypeId">Condition</label>
+    <select name="ConditionTypeId" class="form-control" formControlName="ConditionTypeId">
+      <option *ngFor="let conditionType of conditionTypes" [value]="conditionType.Id">
+        {{conditionType.Name}}</option>
+    </select>
+  </div>
+  <app-question-base [formGroup]="formGroup" [index]="index"></app-question-base>
+</div>
