--- a/src/app/sub-inputs/sub-inputs.component.html
+++ b/src/app/sub-inputs/sub-inputs.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let subInput of subInputs">
-  {{subInput}}
-  <app-sub-inputs [subInputs]="subInput.subInputs" *ngIf="subInput.subInputs"></app-sub-inputs>
+<div *ngFor="let subInput of subInputs; let i = index" class="sub-inputs-list">
+  <app-sub-input [formGroup]="subInput" [index]="i"></app-sub-input>
+  <app-sub-inputs *ngIf="hasSubInputs(subInput)" [subInputs]="getSubInputs(subInput)"></app-sub-inputs>
 </div>
