--- a/src/app/question-base/question-base.component.html
+++ b/src/app/question-base/question-base.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="formGroup">
+<div [formGroup]="parentFormGroup">
   <div class="form-group">
     <label for="Question">Question</label>
     <input type="text" name="Question" class="form-control" formControlName="Question">
