--- a/src/app/sub-inputs/sub-inputs.component.html
+++ b/src/app/sub-inputs/sub-inputs.component.html
@@ -1,4 +1,6 @@
-<div *ngFor="let subInput of subInputs; let i = index" class="sub-inputs-list">
-  <app-sub-input [formGroup]="subInput" [index]="i"></app-sub-input>
-  <app-sub-inputs *ngIf="hasSubInputs(subInput)" [subInputs]="getSubInputs(subInput)"></app-sub-inputs>
+<div *ngIf="subInputs" [formGroup]="parentFormGroup">
+  <div *ngFor="let subInput of subInputs; let i = index" class="sub-inputs-list" formArrayName="SubInputs">
+    <app-sub-input [parentFormGroup]="subInput" [index]="i"></app-sub-input>
+    <app-sub-inputs *ngIf="hasSubInputs(subInput)" [parentFormGroup]="subInput"></app-sub-inputs>
+  </div>
 </div>
