--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,5 @@
 </div>
 <div class="row padded">
   <button class="spaced btn btn-secondary" (click)="addInput()">Add Input</button>
-  <button class="spaced btn btn-primary" (click)="createForm()">Create Form</button>
+  <button class="spaced btn btn-primary" (click)="save()">Save Form</button>
 </div>
